--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
 
     <button class="w3-button w3-light-grey w3-padding-large w3-section">
-      <a href="https://github.com/ejaaenjoy/cvrejaa/" download style="text-decoration:none;color:inherit;">
+      <a href="https://github.com/ejaaeenjoy/cvrejaa/" download style="text-decoration:none;color:inherit;">
       <i class="fa fa-download"></i> Download Resume
       </a>
     </button>
